fix layout /spacing - about page

--- a/css/about.css
+++ b/css/about.css
@@ -39,6 +39,10 @@ section {
     height: inherit;
 }
 
+.about-header h1 {
+    font-size: 4rem;
+}
+
 .about-intro {
     display: flex;
     justify-content: space-between;
@@ -48,7 +52,7 @@ section {
 
 .about-intro_img {
     border: 1px solid var(--gray);
-    padding: 1rem;
+    padding: 0.5rem;
 }
 
 .about-intro_copy {
@@ -57,6 +61,7 @@ section {
 
 .about-intro_copy h3 {
     margin-bottom: 1rem;
+    text-wrap: auto;
 }
 
 .about-intro_copy p {
@@ -72,6 +77,7 @@ ion-icon {
     color: var(--orange);
     margin: 0 1rem;
     font-size: 32px;
+    padding-bottom: 2rem;
 }
 
 
@@ -145,7 +151,7 @@ ion-icon {
 
 .background-text p {
     font-family: var(--geistLight);
-    font-size: 1rem;
+    font-size: 1.125rem;
     /* line-height: 28px; */
 }
 
@@ -299,11 +305,18 @@ ion-icon {
 @media (min-width: 768px) {
     .about-header {
         margin: 0rem 4rem;
+        height: 100vh;
+        display: flex;
+        flex-direction: column;
+        justify-content: flex-start;
+    }
+
+    .about-header h1 {
+        font-size: 5rem;
     }
 
     .about-intro_img {
         width: 100%;
-        margin-top: 1rem;
     }
 
     .about-intro_img img {
@@ -344,11 +357,33 @@ ion-icon {
 
 @media (min-width: 1024px) {
 
+    /* .about-intro_img {
+        height: inherit
+    }
+
+    .about-intro_img img {
+        max-height: 35rem;
+    }
+
+    .about-intro_copy h3 {
+        font-size: 2.5rem;
+    }
+
+    .about-intro_copy p {
+        font-size: 1.5rem;
+    }
+
+    ion-icon {
+        margin-top: 1rem;
+        font-size: 48px;
+    } */
+
+
     .about-intro {
         justify-content: space-between;
         align-items: flex-start;
         flex-direction: row;
-        gap: 4rem;
+        gap: 3rem;
     }
 
     .about-intro_copy {
@@ -359,21 +394,24 @@ ion-icon {
 
     .about-intro_img {
         width: inherit;
+        height: 90%;
     }
 
     .about-intro_img img {
-        width: 100%;
-        height: auto;
-        max-height: 20rem;
+        height: 100%;
+        width: auto;
+        max-height: 100rem;
         object-fit: cover;
     }
 
     .about-intro_copy h3 {
-        font-size: 2rem;
-    }
+        font-size: 1.5rem;
+        font-weight: 500;
 
+    }
     .about-intro_copy p {
-        margin-bottom: 1.5rem;
+        margin-bottom: 0.75rem;
+        /* font-size: 1rem; */
     }
 
     .about-intro_copy-socials {
@@ -417,6 +455,18 @@ ion-icon {
 }
 
 @media (min-width: 1280px) {
+    .about-header {
+        height: 60vh;
+    }
+
+    .about-intro_img {
+        width: inherit;
+    }
+
+    .about-intro_copy {
+        width: 60%;
+    }
+
     .mini-cv_education {
         margin: 0 5rem;
     }
@@ -445,8 +495,10 @@ ion-icon {
 
 @media (min-width: 1920px) {
     .about-header {
+        height: 60vh;
         max-width: 1700px;
         margin: 0 auto;
+        padding-top: 5.5rem;
     }
 
     .about-background {
@@ -454,9 +506,31 @@ ion-icon {
         margin: 0 auto;
     }
 
+    .about-intro {
+        margin-top: 0.75rem;
+    }
+    .about-intro_img {
+        width: 40%;
+        height: inherit;
+    }
+
     .about-intro_img img {
-        max-width: 30rem;
-        max-height: 30rem;
+        width: 100%;
+        height: auto;
+        max-height: 27.5rem;
+    }
+
+    .about-intro_copy h3 {
+        width: 100%;
+        font-size: 2.25rem;
+        font-weight: 450;
+        text-wrap: pretty;
+    }
+
+    .about-intro_copy p {
+        
+        text-wrap: pretty;
+        font-size: 1.5rem;
     }
 
     .mini-cv_cta {
@@ -496,11 +570,27 @@ ion-icon {
     .p-light_special {
         font-size: 1.25rem;
     }
+
+    ion-icon {
+        color: var(--orange);
+        margin-top: 1rem;
+        font-size: 48px;
+    }
+}
+
+@media (min-width: 2560px) {
+    .about-header {
+        height: 45vh;
+    }
+    .about-header h1 {
+        font-size: 7rem;
+    }
 }
 
 
+
 /* My background section - built from desktop down to mobile */
-@media (max-width: 768px) {
+@media (max-width: 900px) {
     .about-background {
         flex-direction: column;
         justify-content: center;
@@ -531,7 +621,7 @@ ion-icon {
     }
 
     .background-text p {
-        font-size: 1.5rem;
+        font-size: 1rem;
     }
 
     .progress-bar {
@@ -546,13 +636,17 @@ ion-icon {
     }
 }
 
-@media (max-width: 1028px) {
-
+@media (max-width: 768px) {
+    .background-title p {
+        font-size: 1rem;
+    }
 }
+
+@media (max-width: 1028px) {}
 
 @media (max-width: 1280px) {
     .background-title p {
-        font-size: 2rem;
+        font-size: 1.25rem;
     }
 }
 
@@ -573,4 +667,3 @@ ion-icon {
 .lenis.lenis-smooth iframe {
     pointer-events: none;
 }
-
